force-app/main/default/objects/Site_Observation__c/Site_Observation__c.object-meta.xml
<CustomObject>
  <label>Site Observation</label>
  <pluralLabel>Site Observations</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Site Observation</label>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>