force-app/main/default/objects/Site_Observation__c/fields/Location_Context__c.field-meta.xml
<CustomField>
    <fullName>Location_Context__c</fullName>
    <label>Location Context</label>
    <type>Text</type>
    <length>255</length>
</CustomField>