force-app/main/default/objects/Site_Observation__c/fields/Observation_Time__c.field-meta.xml
<CustomField>
  <fullName>Observation_Time__c</fullName>
  <label>Observation Time</label>
  <type>DateTime</type>
</CustomField>