force-app/main/default/objects/Site_Observation__c/fields/Observation_Type__c.field-meta.xml
<CustomField>
    <fullName>Observation_Type__c</fullName>
    <label>Observation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>            
            <value>
                <fullName>Saftey</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
                <default>true</default>
                <label>Access</label>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Condition</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>